--- a/installing.html
+++ b/installing.html
@@ -6,7 +6,7 @@ tagline : npm rocks!
 sitemap : true
 ---
 {% capture menu %}
-
+  {% include menu-index.html %}
 {% endcapture %}
 
 {% capture main %}
