--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@ tagline : Links to mentions about AwsSum
 sitemap : true
 ---
 {% capture menu %}
-  <h2>Links</h2>
+  {% include menu-index.html %}
 {% endcapture %}
 
 {% capture main %}
