--- a/bugs.html
+++ b/bugs.html
@@ -5,7 +5,11 @@ title   : Bugs
 tagline : And how to report them properly
 sitemap : true
 ---
-<div class="content content-bugs">
+{% capture menu %}
+  {% include menu-index.html %}
+{% endcapture %}
+
+{% capture main %}
 
   <h1>Finding and Submitting Bugs</h1>
 
@@ -29,4 +33,6 @@ sitemap : true
     Many thanks. :)
   </p>
 
-</div>
+{% endcapture %}
+
+{% include main.html %}
