Also link to node-awssum-scripts

--- a/examples/index.html
+++ b/examples/index.html
@@ -37,6 +37,7 @@ sitemap : true
   </p>
 
   <ul>
+    <li><a href="https://github.com/appsattic/node-awssum-scripts">node-awssum-scripts</a> - many example scripts including syncing to S3 and talking to CloudWatch</li>
     <li><a href="https://github.com/appsattic/connect-stream-s3">connect-stream-s3</a> - Streaming connect middleware for uploading files to Amazon S3</li>
     <li><a href="https://github.com/appsattic/connect-error-amazon-ses">connect-error-amazon-ses</a> - send connect errors to an email address using Amazon:SES</li>
     <li></li>
