--- a/example.html
+++ b/example.html
@@ -41,7 +41,7 @@ fmt.title('s3.ListBuckets');
 
 fmt.field('Region',          s3.region());
 fmt.field('EndPoint',        s3.host() );
-fmt.field('AccessKeyId',     s3.accessKeyId() );
+fmt.field('AccessKeyId',     s3.accessKeyId().substr(0, 3) + '...' );
 fmt.field('SecretAccessKey', s3.secretAccessKey().substr(0, 3) + '...' );
 fmt.field('AwsAccountId',    s3.awsAccountId() );
 
@@ -64,7 +64,7 @@ s3.ListBuckets(function(err, data) {
 --- s3.ListBuckets ------------------------------------------------------------
 Region               : us-east-1
 EndPoint             : s3.amazonaws.com
-AccessKeyId          : 0WCKW7T9QFZ63ZBSPTR2
+AccessKeyId          : 0WC...
 SecretAccessKey      : +/7...
 AwsAccountId         : undefined
 -------------------------------------------------------------------------------
