--- a/installing.html
+++ b/installing.html
@@ -17,25 +17,25 @@ sitemap : true
     With NPM it's so easy to install AwsSum. Truly, the best package manager for any language.
   </p>
 
-  <pre>
-  $ npm install awssum
-  </pre>
+{% highlight sh %}
+npm install awssum
+{% endhighlight %}
 
   <p>
     Or you can get a tarball from GitHub:
   </p>
 
-  <pre>
-  $ wget https://github.com/appsattic/node-awssum/tarball/master
-  </pre>
+{% highlight sh %}
+wget https://github.com/appsattic/node-awssum/tarball/master
+{% endhighlight %}
 
   <p>
     Or clone the repo using Git:
   </p>
 
-  <pre>
-  $ git clone git://github.com/appsattic/node-awssum.git
-  </pre>
+{% highlight sh %}
+git clone git://github.com/appsattic/node-awssum.git
+{% endhighlight %}
 
 {% endcapture %}
 
