Make front page nicer

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ sitemap : true
       Node.js modules for talking to <strong>lots</strong> of Web Service APIs.
     </p>
     <p>
-      <a class="btn btn-primary btn-large" href="https://github.com/appsattic/node-awssum/">In Git &raquo;</a>
-      <a class="btn btn-primary btn-large" href="https://npmjs.org/package/awssum">On NPM &raquo;</a>
-    </p>
-    <p>
+      <strong>GitHub</strong>: <a href="https://github.com/appsattic/node-awssum/">AwsSum</a> <small>Please star :)</small>
+      <br>
+      <strong>NPM</strong>: <a href="https://npmjs.org/package/awssum">AwsSum</a>
+      <br>
       <strong>IRC</strong>: #awssum on Freenode
       <br>
       <strong>Email</strong>: chilts@appsattic.com
