--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@ sitemap : true
       Node.js modules for talking to <strong>lots</strong> of Web Service APIs.
     </p>
     <p>
-      <strong>GitHub</strong>: <a href="https://github.com/appsattic/node-awssum/">AwsSum</a> <small>Please star :)</small>
+      &bull; <strong>GitHub</strong>: <a href="https://github.com/appsattic/node-awssum/">AwsSum</a> <small>Please star :)</small>
       <br>
-      <strong>NPM</strong>: <a href="https://npmjs.org/package/awssum">AwsSum</a>
+      &bull; <strong>NPM</strong>: <a href="https://npmjs.org/package/awssum">AwsSum</a>
       <br>
-      <strong>IRC</strong>: #awssum on Freenode
+      &bull; <strong>IRC</strong>: #awssum on Freenode
       <br>
-      <strong>Email</strong>: chilts@appsattic.com
+      &bull; <strong>Email</strong>: chilts@appsattic.com
       <br>
-      <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a> <small>please provide an example request/response</small>
+      &bull; <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a> <small>provide an example request/response</small>
       <br>
-      <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="false">Follow @andychilton</a>
+      &bull; <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="false">Follow @andychilton</a>
     </p>
   </div>
 
