--- a/misc/incremental-backoff.html
+++ b/misc/incremental-backoff.html
@@ -6,7 +6,7 @@ tagline : Playing nicely
 sitemap : true
 ---
 {% capture menu %}
-  {% include menu-examples.html %}
+  {% include menu-misc.html %}
 {% endcapture %}
 
 {% capture main %}
