Fix some bits up

--- a/tools/index.html
+++ b/tools/index.html
@@ -21,7 +21,7 @@ sitemap : true
   </p>
 
   <ul>
-    <li><a href="/tools/awssum-scripts.html">AwsSum Scripts</a> - example scripts to AWS</li>
+    <li><a href="/tools/amazon-scripts.html">Amazon Scripts</a> - example scripts to AWS</li>
     <li><a href="/tools/connect-middleware.html">Connect Middleware</a> - doing stuff before you know it</li>
     <li><a href="/tools/s3-related.html">Tools for S3</a>
     <li><a href="/tools/build-tools.html">Build Tools</a>
