--- a/tools/s3-related.html
+++ b/tools/s3-related.html
@@ -24,7 +24,7 @@ sitemap : true
       (<a href="https://npmjs.org/package/s3-store">npm</a>)
       - A simple data-store for the jolira-replicator using Amazon S3</li>
     <li>
-      <a href="https://github.com/B2MSolutions/node-ec2-each"></a>
+      <a href="https://github.com/B2MSolutions/node-ec2-each">ec2-each</a>
       (<a href="https://npmjs.org/package/ec2-each">npm</a>)
       - Iterate ec2 instances and do things
     </li>
