--- a/index.html
+++ b/index.html
@@ -28,37 +28,33 @@ sitemap : true
       &bull; <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a> <small>provide an example request/response</small>
       <br>
       &bull; <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="false">Follow @andychilton</a>
+      <br>
+      &bull; <strong>Meteor</strong>: <a href="https://github.com/possibilities/meteor-awssum">meteor-awssum</a> by Mike Bannister
     </p>
   </div>
 
   <div class="row-fluid">
 
     <div class="span4">
-      <h2>???</h2>
+      <h2>Some Company</h2>
       <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-        euismod. Donec sed odio dui.
+        If you are using AwsSum in production, get in contact if you would like to provide a testimonial. :)
       </p>
       <p><a class="btn" href="#">View details &raquo;</a></p>
     </div><!-- /.span4 -->
 
     <div class="span4">
-      <h2>???</h2>
+      <h2>Another Company</h2>
       <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-        euismod. Donec sed odio dui.
+        If you are using AwsSum in production, get in contact if you would like to provide a testimonial. :)
       </p>
       <p><a class="btn" href="#">View details &raquo;</a></p>
     </div><!-- /.span4 -->
 
     <div class="span4">
-      <h2>???</h2>
+      <h2>Final Company</h2>
       <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-        euismod. Donec sed odio dui.
+        If you are using AwsSum in production, get in contact if you would like to provide a testimonial. :)
       </p>
       <p><a class="btn" href="#">View details &raquo;</a></p>
     </div><!-- /.span4 -->
