Fix up some menus and the front page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ sitemap : true
       <br>
       &bull; <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="false">Follow @andychilton</a>
       <br>
-      &bull; <strong>Meteor</strong>: <a href="https://github.com/possibilities/meteor-awssum">meteor-awssum</a> by Mike Bannister
+      &bull; <strong>Meteor</strong>: <a href="https://github.com/possibilities/meteor-awssum">meteor-awssum</a> <small>by Mike Bannister</small>
     </p>
   </div>
 
