--- a/amazon/ec2/index.html
+++ b/amazon/ec2/index.html
@@ -28,12 +28,16 @@ var ec2 = new Ec2({
   <h2>Examples</h2>
   <h3 name="DescribeInstances">
     DescribeInstances
-    <small><a href="http://goo.gl/">(Open docs on AWS)</a></small>
+    <small><a href="http://goo.gl/tfIek">(Open docs on AWS)</a></small>
   </h3>
 
-  <p>
-    ...
-  </p>
+{% highlight javascript %}
+ec2.DescribeInstances(function(err, data) {
+    fmt.title("Amazon:EC2:DescribeInstances - ");
+    fmt.dump(err, 'Error');
+    fmt.dump(data, 'Data');
+});
+{% endhighlight %}
 
 {% endcapture %}
 
