Remove version from front page (already repeated)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 id      : index
 layout  : default
-title   : AwsSum v0.9.0
+title   : AwsSum
 tagline : Node.js modules for talking to lots of Web Service APIs.
 sitemap : true
 ---
