typos + SimpleDB.Select example
added focus on modular way AWSSUM is set up and added first (simple)
example.

--- a/amazon.html
+++ b/amazon.html
@@ -10,6 +10,7 @@ sitemap : true
   <li class="nav-header">Services</li>
   <li class="tab-amazon-s3"><a href="amazon-s3.html">Amazon S3</a></li>
   <li class="tab-amazon-ec2"><a href="amazon-ec2.html">Amazon EC2</a></li>
+  <li class="tab-amazon-simppledb"><a href="amazon-simpledb.html">Amazon SimpleDB</a></li>
 
   <li class="nav-header">Misc</li>
   <li class="tab-amazon-signatures"><a href="amazon-signatures.html">Signatures</a></li>
