Fix the misc section

--- a/misc/fmt.html
+++ b/misc/fmt.html
@@ -1,29 +1,17 @@
 ---
-id      : tools
+id      : tools-fmt
 layout  : default
-title   : Useful Tools
-tagline : Small tools, make fun code
+title   : fmt
+tagline : Formatting your output
 sitemap : true
 ---
 {% capture menu %}
-  {% include menu-index.html %}
+  {% include menu-misc.html %}
 {% endcapture %}
 
 {% capture main %}
 
-  <h1>Useful Tools</h1>
-
-  <p>
-    AwsSum is one thing and one thing only. It is a small helper wrapper around web services. One library per
-    service. One function per operation. Just an easy to use interface to abstract away the differences between each.
-  </p>
-
-  <p>
-    It doesn't do retries after failures and it doesn't wrap the results in objects either. This is the Node.js way. Do
-    one thing simply and do it well. Combine with other modules if your needs are higher.
-  </p>
-
-  <h2>fmt</h2>
+  <h1>fmt</h1>
 
   <p>
     When trying test programs, new services or new operations, I usually write a small program to show me exactly what
