Make sure all operations have args and results sections

--- a/amazon/s3/get-object-acl.html
+++ b/amazon/s3/get-object-acl.html
@@ -24,6 +24,16 @@ s3.GetObjectAcl({}, function(err, data) {
 });
 {% endhighlight %}
 
+  <h2>Args</h2>
+
+  <p>...</p>
+
+  <h2>Result</h2>
+
+{% highlight %}
+...
+{% endhighlight %}
+
 {% endcapture %}
 
 {% include main.html %}
